fix header cutoff issue

--- a/frontend/src/components/SidebarLayout/index.css
+++ b/frontend/src/components/SidebarLayout/index.css
@@ -25,8 +25,10 @@ body {
   flex-grow: 1;
   background-color: var(--white);
   max-height: 100vh;
-  overflow-y: hidden;
+  overflow: hidden;
   position: relative;
+  display: flex;
+  flex-direction: column;
 }
 
 .content-heading {
